<resources>
  <string name="app_name">GreenPrint</string>
  <string name="base_url">https://apis.berkeley.edu/</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">GreenPrint</string>
  <string name="nav_header_subtitle">Reducing Carbon One Step At A Time</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>

...
