...
  android:background="@color/scrollViewBackground"
  android:padding="@dimen/activity_horizontal_margin"
  android:id="@+id/survey_id2"
  >

...

    <EditText
      android:id="@+id/answer_1_id"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
...

    <EditText
      android:id="@+id/answer_2_id"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
...

    <EditText
      android:id="@+id/answer_3_id"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
...

    <EditText
      android:id="@+id/answer_4_id"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
...

    <EditText
      android:id="@+id/answer_5_id"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
...

    <EditText
      android:id="@+id/answer_6_id"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
...

    <EditText
      android:id="@+id/answer_7_id"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
...

    <EditText
      android:id="@+id/answer_8_id"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
...

    <EditText
      android:id="@+id/answer_9_id"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
...

    <EditText
      android:id="@+id/answer_10_id"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
...

    <EditText
      android:id="@+id/answer_11_id"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
...

    <EditText
      android:id="@+id/answer_12_id"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
...

    <EditText
      android:id="@+id/answer_13_id"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
...

    <EditText
      android:id="@+id/answer_14_id"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
...

    <EditText
      android:id="@+id/answer_15_id"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
...

    <EditText
      android:id="@+id/answer_16_id"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
...

    <EditText
      android:id="@+id/answer_17_id"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
...

    <EditText
      android:id="@+id/answer_18_id"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
...

    <EditText
      android:id="@+id/answer_19_id"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
...

    <EditText
      android:id="@+id/answer_20_id"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
...
    </EditText>
    <Button
      android:id="@+id/submit_button"
      android:layout_width="100dp"
      android:layout_height="80dp"
      android:text="Submit"
      android:textStyle="bold"
      app:layout_constraintLeft_toLeftOf="@+id/guideline"
...
